[gd_scene load_steps=4 format=3 uid="uid://t8adrp1dpnyo"]

[ext_resource type="Script" uid="uid://h1ldx0b8i0lh" path="res://start/start.gd" id="1_275hl"]
[ext_resource type="Theme" uid="uid://do4xaek8kfvrb" path="res://components/button/theme.tres" id="2_k11ym"]
[ext_resource type="StyleBox" uid="uid://dmqeoapekhu85" path="res://start/hover.tres" id="2_pgi65"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_275hl")

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 256.0
offset_right = 296.0
offset_bottom = 350.0
theme = ExtResource("2_k11ym")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = ExtResource("2_pgi65")
text = "Start"

[node name="Saves" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 376.0
offset_right = 292.0
offset_bottom = 428.0
theme = ExtResource("2_k11ym")
theme_override_font_sizes/font_size = 31
text = "Saves"

[node name="Settings" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 452.0
offset_right = 295.0
offset_bottom = 504.0
theme = ExtResource("2_k11ym")
theme_override_font_sizes/font_size = 31
text = "Settings"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 520.0
offset_right = 294.0
offset_bottom = 572.0
theme = ExtResource("2_k11ym")
theme_override_font_sizes/font_size = 31
text = "Quit"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Saves" to="." method="_on_saves_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
